--- a/p1html_css/indexpractica.html
+++ b/p1html_css/indexpractica.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>P1 HTML</title>
-    <link rel="stylesheet" href="stylepractica.css"
+    <link rel="stylesheet" href="stylepractica.css"/>
 </head>
 
 <body>
    
     <header><img src="
         https://i.pinimg.com/originals/70/fa/97/70fa97bac09e524bae4c006a1ead5512.jpg" height="50" width="42"> <p class= "titulo blog">Blog Dog</p>
-        <div = "menu"></div><nav>
+        <div ="menu"></div>
+        
+        <nav>
             <ul>
-            <li><a href="https://kodemia.mx/">Inicio</a></li>
+            <li><a href="https://www.20minutos.es/minuteca/perros">Inicio</a></li>
             <li><a href="https://www.schnauzi.com/10-consejos-para-perros//">Consejos</a></li>
             <li><a href="https://www.purina.es/perros/razas-de-perro/tipos-de-razas-de-perro">Razas</a></li>
             <li> <a href="https://www.facebook.com/">Contacto</a></li> 
