--- a/p2bootstrap_layout/index.html
+++ b/p2bootstrap_layout/index.html
@@ -29,6 +29,8 @@
         </ul>
       </div>
     </header>
+    <div class="container-principal">
+      <div class="row">
     <section class="main container col-md-9">
       <div class="posts col-md-9">
         <article class="post clearfix border-black"> 
@@ -69,14 +71,15 @@
       <h3>More Information</h3>
       </div>
     </aside>
+    </div>
+    </div>
 
     <footer>
       <div class="container bg-primary">
         <div class="row">
-          <div class="col-xs-6">
+          <div class="col-12">
             <p>Nitzeli Villa</p>
           </div>
-          <div class="col-xs-6">
     </footer>
 
     <script
