--- a/practica_JQuery/index.html
+++ b/practica_JQuery/index.html
@@ -15,27 +15,27 @@
                 <form>
                     <div class="row p-2">
                         <div class="col">
-                            <input id="userForm" type="text" class="form-control" placeholder="First name">
+                            <input type="text" class="form-control" placeholder="First name">
                         </div>
                         <div class="col">
-                            <input  id="userForm"type="text" class="form-control" placeholder="Last name">
-                        </div>
-                    </div>
-                    <div class="row p-2">
-                        <div class="col">
-                            <input  id="userForm" type="number" class="form-control" placeholder="Age">
+                            <input type="text" class="form-control" placeholder="Last name">
                         </div>
                     </div>
                     <div class="row p-2">
                         <div class="col">
-                            <input  id="userForm" type="text" class="form-control" placeholder="E-mail">
+                            <input type="number" class="form-control" placeholder="Age">
+                        </div>
+                    </div>
+                    <div class="row p-2">
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="E-mail">
                         </div>
                     </div>
                 </form>
-                <button id ="btnSave" type="button" class="btn btn-primary">Agregar</button>
+                <button type="button" class="btn btn-primary">Agregar</button>
             </div>
             <div class="col-8 p-5">
-                <table id="usersTable" class="table">
+                <table class="table">
                     <thead>
                         <tr>
                             <th scope="col">#</th>
@@ -47,48 +47,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>59</td>
-                            <td>@mdo</td>
-                            <td><svg class="bi bi-x text-danger" width="3em" height="3em" viewBox="0 0 16 16"
-                                    fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd"
-                                        d="M11.854 4.146a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708-.708l7-7a.5.5 0 0 1 .708 0z" />
-                                    <path fill-rule="evenodd"
-                                        d="M4.146 4.146a.5.5 0 0 0 0 .708l7 7a.5.5 0 0 0 .708-.708l-7-7a.5.5 0 0 0-.708 0z" />
-                                </svg></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>13</td>
-                            <td>@fat</td>
-                            <td><svg class="bi bi-x text-danger" width="3em" height="3em" viewBox="0 0 16 16"
-                                    fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd"
-                                        d="M11.854 4.146a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708-.708l7-7a.5.5 0 0 1 .708 0z" />
-                                    <path fill-rule="evenodd"
-                                        d="M4.146 4.146a.5.5 0 0 0 0 .708l7 7a.5.5 0 0 0 .708-.708l-7-7a.5.5 0 0 0-.708 0z" />
-                                </svg></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>16</td>
-                            <td>@twitter</td>
-                            <td><svg class="bi bi-x text-danger" width="3em" height="3em" viewBox="0 0 16 16"
-                                    fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd"
-                                        d="M11.854 4.146a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708-.708l7-7a.5.5 0 0 1 .708 0z" />
-                                    <path fill-rule="evenodd"
-                                        d="M4.146 4.146a.5.5 0 0 0 0 .708l7 7a.5.5 0 0 0 .708-.708l-7-7a.5.5 0 0 0-.708 0z" />
-                                </svg></td>
-                        </tr>
+        
                     </tbody>
                 </table>
                 <button type="button" class="btn btn-success">Guardar cambios</button>
