--- a/practica_JQuery/index.html
+++ b/practica_JQuery/index.html
@@ -4,41 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
     <div class="container">
         <div class="row">
             <div class="col-4 p-5">
                 <form>
                     <div class="row p-2">
                         <div class="col">
-                            <input type="text" class="form-control" placeholder="First name">
+                            <input id="first" type="text" class="form-control" placeholder="First name">
                         </div>
                         <div class="col">
-                            <input type="text" class="form-control" placeholder="Last name">
-                        </div>
-                    </div>
-                    <div class="row p-2">
-                        <div class="col">
-                            <input type="number" class="form-control" placeholder="Age">
+                            <input id="last" type="text" class="form-control" placeholder="Last name">
                         </div>
                     </div>
                     <div class="row p-2">
                         <div class="col">
-                            <input type="text" class="form-control" placeholder="E-mail">
+                            <input id="age" type="number" class="form-control" placeholder="Age">
+                        </div>
+                    </div>
+                    <div class="row p-2">
+                        <div class="col">
+                            <input id="mail" type="text" class="form-control" placeholder="E-mail">
                         </div>
                     </div>
                 </form>
-                <button type="button" class="btn btn-primary">Agregar</button>
+                <button id="submit" type="button" class="btn btn-primary">Agregar</button>
             </div>
             <div class="col-8 p-5">
                 <table class="table">
                     <thead>
                         <tr>
-                            <th scope="col">#</th>
                             <th scope="col">First Name</th>
                             <th scope="col">Last Name</th>
                             <th scope="col">Age</th>
@@ -47,21 +47,21 @@
                         </tr>
                     </thead>
                     <tbody>
-        
                     </tbody>
                 </table>
-                <button type="button" class="btn btn-success">Guardar cambios</button>
+                <button id="saveData" type="button" class="btn btn-success">Guardar cambios</button>
             </div>
         </div>
     </div>
-
-<script src="js/main.js"></script>
-<script
-src="https://code.jquery.com/jquery-3.5.1.min.js"
-integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
